--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,11 +10,11 @@
 </head>
 
 <body>
-  <div class="flex-column justify-space-around">
-    <header class="display-flex justify-space-between align-center p-2">
+    <header class="logo">
       <h1>
-        <div class="img" src="{{/img}}"</div>
+        <div class="img" src="{{/img/ChaTeaLogo.jpg}}"></div>
         <a href="/">Chatea!</a>
+        <h2></h2>
       </h1>
       <nav>
         {{#if logged_in}}
