--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -6,40 +6,29 @@
 
 <div class="row mt-4">
   <div class="col-md-6">
-    <h3>Create a New Project:</h3>
+    <h3>Chatea</h3>
 
-    <form class="form new-project-form">
+    <form class="add-new-user">
       <div class="form-group">
-        <label for="project-name">project name:</label>
-        <input class="form-input" type="text" id="project-name" name="project-name" />
+        <label for="user-name">Username</label>
+        <input class="form-input" type="text" id="user-name" />
       </div>
       <div class="form-group">
-        <label for="project-funding">needed funding ($):</label>
-        <input class="form-input" type="number" id="project-funding" name="project-funding" />
-      </div>
-      <div class="form-group">
-        <label for="project-desc">description:</label>
-        <textarea class="form-input" id="project-desc" name="project-desc"></textarea>
-      </div>
-      <div class="form-group">
-        <button type="submit" class="btn btn-primary">Create</button>
+        <button type="submit" class="btn btn-primary">Search</button>
       </div>
     </form>
   </div>
 
-  {{#if projects.length}}
-  <div class="col-md-6 project-list">
-    <h3>Current Projects:</h3>
+  {{#if user.name}}
+  <div class="friend-list">
+    <h3>Your Friend List</h3>
 
-    {{#each projects as |project|}}
-    <div class="row mb-2">
-      <div class="col-md-8">
-        <h4><a href="/project/{{project.id}}">{{project.name}}</a></h4>
+    {{#each users as |user|}}
+      <div class="delete-user">
+        <h4><a href="/user/{{user.name}}</a></h4>
+        <button class="remove-user" data-id="{{user.name}}">DELETE</button>
       </div>
-      <div class="col-md-4">
-        <button class="btn btn-sm btn-danger" data-id="{{project.id}}">DELETE</button>
-      </div>
-    </div>
+  </div>
     {{/each}}
   </div>
   {{/if}}
