--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,16 +1,11 @@
-<div class="row">
-  <div class="col-auto">
-    <h2>Welcome, {{name}}!</h2>
-  </div>
-</div>
 
-<div class="row mt-4">
-  <div class="col-md-6">
-    <h3>Chatea</h3>
+  <div class="greet">
+    <h2>Welcome, {{username}},  Lets Chat!</h2>
+  </div>
 
     <form class="add-new-user">
       <div class="form-group">
-        <label for="user-name">Username</label>
+        <label for="user-name">Search User</label>
         <input class="form-input" type="text" id="user-name" />
       </div>
       <div class="form-group">
@@ -19,14 +14,16 @@
     </form>
   </div>
 
-  {{#if user.name}}
+  {{#if userlist}}
   <div class="friend-list">
-    <h3>Your Friend List</h3>
+    <h1>Your Friend List</h1>
+    <h2>{{user.list}}</h2>
 
-    {{#each users as |user|}}
+
+    {{#each user.list as |user.list|}}
       <div class="delete-user">
-        <h4><a href="/user/{{user.name}}</a></h4>
-        <button class="remove-user" data-id="{{user.name}}">DELETE</button>
+        <h4> href="/user/{{username}}</h4>
+        <button class="remove-user" data-id="{{username}}">DELETE</button>
       </div>
   </div>
     {{/each}}
@@ -34,4 +31,10 @@
   {{/if}}
 </div>
 
-<script src="./js/profile.js"></script>
+<script src="/public/js/profile.js"></script>
+
+{{{body}}}
+
+
+
+
