--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -14,16 +14,11 @@
     </form>
   </div>
 
-  {{#if userlist}}
-  <div class="friend-list">
-    <h1>Your Friend List</h1>
-    <h2>{{user.list}}</h2>
-
-
     {{#each user.list as |user.list|}}
-      <div class="delete-user">
-        <h4> href="/user/{{username}}</h4>
-        <button class="remove-user" data-id="{{username}}">DELETE</button>
+      <div class="user-list">
+        <h1>Your Friend List</h1>
+    <h2>{{user.list}}</h2>
+        
       </div>
   </div>
     {{/each}}
