addded patials and edited handlebars

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -32,7 +32,10 @@
       {{{ body }}}
     </main>
     <footer>
-      
+      <div class="contact-info">
+        <h1>Email:</h1> 
+        <h1>Call us</h1>
+      </div>
     </footer>
   </div>
 
