new branch and integrating pieces

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -12,7 +12,6 @@
         <button type="submit" class="btn btn-primary">Search</button>
       </div>
     </form>
-  </div>
     
       <div class="user-list">
         <h1>Your Friend List</h1>  
@@ -20,16 +19,7 @@
     <h2>{{user}}</h2>
         {{/each}}
       </div>
-  </div>
-    
-  </div>
-  {{/if}}
-</div>
 
-<script src="/public/js/profile.js"></script>
+<script src="/js/profile.js"></script>
 
 {{> chatbox}}
-
-
-
-
