--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,7 +16,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
     <header class="logo">
 
-        <div class="img" src="{{/img/ChaTeaLogo.jpg}}"></div>
+        <div class="img" src="/img/ChaTeaLogo.jpg"></div>
         <h1 id="heading">Chatea</h1>
       <nav>
         {{#if logged_in}}
