--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -21,8 +21,12 @@
 
     <form class="form signup-form">
       <div class="form-group">
-        <label for="name-signup">name:</label>
-        <input class="form-input" type="text" id="name-signup" />
+        <label for="firstname-signup">first name:</label>
+        <input class="form-input" type="text" id="firstname-signup" />
+      </div>
+      <div class="form-group">
+        <label for="lastname-signup">last name:</label>
+        <input class="form-input" type="text" id="lastname-signup" />
       </div>
       <div class="form-group">
         <label for="email-signup">email:</label>
@@ -39,4 +43,4 @@
   </div>
 </div>
 
-<script src="/public/js/login.js"></script>
+<script src="/js/login.js"></script>
