--- a/views/partials/chatbox.handlebars
+++ b/views/partials/chatbox.handlebars
@@ -2,11 +2,12 @@
   <h1>{{user.name}}</h1>
   <p>{{text.Chat}}</p>
   <p>Sent by {{user.name}}</p>
-  <p>
-    <span for="img" aria-label="chat-box">insert the chat img</span>
-  </p>
-  <p>
-    <button class="btn btn-primary">Send</button>
-  </p>
+  <div
+      id="chat-container"
+      class="bg-light border border-dark rounded p-5"
+    ></div>
+    <form id="send-msg" class="bg-light border border-dark rounded p-1">
+      <input type="text" id="msg-input" />
+      <button type="submit" id="send-btn" class="bg-light shadow p-1 mb-2 rounded">Send</button>
+    </form>
 </div>
-
