--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,15 +18,14 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
     <header class="logo">
 
-        <img class="img" src="/img/ChaTea Logo.jpg">
-        <h1 id="heading">Chatea</h1>
+        <img class="img" src="/img/chatlogo.jpg"
       <nav>
         {{#if logged_in}}
         <a href="/profile">profile</a> |
         <button class="no-button" id="logout">logout</button>
         {{else}}
         <a href="/login">login</a>
-        <button class="no-button" id="login">login</button>
+        
         {{/if}}
       </nav>
     </header>
@@ -35,8 +34,8 @@
     </main>
     <footer>
       <div class="contact-info">
-        <h1>Email:</h1> 
-        <h1>Call us</h1>
+        <h1>Email: <a>nimasherpalol7@gmail.com</a></h1>
+        <h1>Phone Number: <a>707-931-9562</a></h1>
       </div>
     </footer>
 
