--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -15,8 +15,8 @@
     
       <div class="user-list">
         <h1>Your Friend List</h1>  
-        {{#each user.list as |user|}}
-    <h2>{{user}}</h2>
+        {{#each firstName as |firstName|}}
+    <h2>{{firstName}}</h2>
         {{/each}}
       </div>
 
