--- a/views/partials/chatbox.handlebars
+++ b/views/partials/chatbox.handlebars
@@ -8,6 +8,6 @@
     ></div>
     <form id="send-msg" class="bg-light border border-dark rounded p-1">
       <input type="text" id="msg-input" />
-      <button type="submit" id="send-btn" class="bg-light shadow p-1 mb-2 rounded">Send</button>
+      <button type="submit" id="send-btn">Send</button>
     </form>
 </div>
