--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -4,11 +4,11 @@
   </div>
 
     <form class="add-new-user">
-      <div class="form-group">
+      <div class="search-form">
         <label for="user-name">Search User</label>
         <input class="form-input" type="text" id="user-name" />
       </div>
-      <div class="form-group">
+      <div class="search-form">
         <button type="submit" class="btn btn-primary">Search</button>
       </div>
     </form>
