--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,6 +1,6 @@
 
   <div class="greet">
-    <h2>Welcome, {{firstName}},  Lets Chat!</h2>
+    <h2>Welcome, Lets Chat!</h2>
   </div>
 
     <form class="add-new-user">
